[gd_scene load_steps=2 format=3 uid="uid://cnayu721vsbae"]

[ext_resource type="Script" path="res://levels/pause_menu/pause_menu.gd" id="1_s8t6t"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s8t6t")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -52.0
offset_right = 256.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 75

[node name="Resume" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="MainMenu" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="button_up" from="PanelContainer/HBoxContainer/Resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="PanelContainer/HBoxContainer/MainMenu" to="." method="_on_button_button_up"]
[connection signal="button_up" from="PanelContainer/HBoxContainer/Quit" to="." method="_on_quit_button_up"]
